@@ -466,8 +466,8 @@ public class TabListMediatorUnitTest {
         mFakeViewHolder2 = prepareFakeViewHolder(mItemView2, POSITION2);
         when(mItemView1.isAttachedToWindow()).thenReturn(true);
         when(mItemView2.isAttachedToWindow()).thenReturn(true);
-        List<Tab> tabs1 = new ArrayList<>(Arrays.asList(mTab1));
-        List<Tab> tabs2 = new ArrayList<>(Arrays.asList(mTab2));
+        List<Tab> tabs1 = List.of(mTab1);
+        List<Tab> tabs2 = List.of(mTab2);
         mSavedTabGroup1 = prepareSavedTabGroup(SYNC_GROUP_ID1, GROUP_TITLE, SYNC_GROUP_COLOR1, 1);
         mSavedTabGroup2 = prepareSavedTabGroup(SYNC_GROUP_ID2, "", SYNC_GROUP_COLOR2, 2);
 
@@ -513,13 +513,9 @@ public class TabListMediatorUnitTest {
         doReturn(mTabFaviconFetcher)
                 .when(mTabListFaviconProvider)
                 .getFaviconFromBitmapFetcher(any(Bitmap.class), any(GURL.class));
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
         doReturn(tabs1).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(tabs2).when(mTabModel).getRelatedTabList(TAB2_ID);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
+        mockRepresentativeTabs(mTab1, mTab2);
         doReturn(mOpenGroupActionListener)
                 .when(mTabListItemOnClickListenerProvider)
                 .onTabGroupClicked(any(Tab.class));
@@ -619,7 +615,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void updatesTitle_WithoutStoredTitle_TabGroup() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -632,7 +628,7 @@ public class TabListMediatorUnitTest {
     public void updatesTitle_WithStoredTitle_TabGroup() {
         // Mock that tab1 and new tab are in the same group with root ID as TAB1_ID.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
@@ -649,7 +645,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void updatesTitle_OnTabGroupTitleChange() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabModel.setTabGroupTitle(TAB_GROUP_ID, CUSTOMIZED_DIALOG_TITLE1);
@@ -678,7 +674,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void updatesTitle_OnTabGroupTitleChange_Empty() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabModel.setTabGroupTitle(TAB_GROUP_ID, "");
@@ -702,7 +698,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void updatesColor_OnTabGroupColorChange_Group_Grid() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabModel.setTabGroupColor(TAB_GROUP_ID, TabGroupColorId.BLUE);
@@ -719,7 +715,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabGroupColorViewProviderDestroyed_Reset() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabModel.setTabGroupColor(TAB_GROUP_ID, TabGroupColorId.BLUE);
@@ -738,7 +734,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabGroupColorViewProviderDestroyed_Remove() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabModel.setTabGroupColor(TAB_GROUP_ID, TabGroupColorId.BLUE);
@@ -886,10 +882,7 @@ public class TabListMediatorUnitTest {
         when(navigationHandle.isSameDocument()).thenReturn(false);
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, ntpUrl);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1148,7 +1141,7 @@ public class TabListMediatorUnitTest {
         RecyclerView.ViewHolder fakeViewHolder3 = prepareFakeViewHolder(itemView3, 2);
         RecyclerView.ViewHolder fakeViewHolder4 = prepareFakeViewHolder(itemView4, 3);
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3, tab4));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3, tab4);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(4));
 
@@ -1179,8 +1172,7 @@ public class TabListMediatorUnitTest {
         fakeViewHolder4 = prepareFakeViewHolder(itemView4, 2);
 
         // Merge 4 to 3.
-        when(mTabModel.getRepresentativeTabAt(1)).thenReturn(tab3);
-        when(mTabModel.getRepresentativeTabAt(2)).thenReturn(tab4);
+        mockRepresentativeTabs(mTab1, tab3, tab4);
         itemTouchHelperCallback.setHoveredTabIndexForTesting(1);
         itemTouchHelperCallback.setSelectedTabIndexForTesting(2);
         itemTouchHelperCallback.getMovementFlags(mRecyclerView, fakeViewHolder3);
@@ -1203,8 +1195,7 @@ public class TabListMediatorUnitTest {
         fakeViewHolder3 = prepareFakeViewHolder(itemView3, 1);
 
         // Merge 3 to 1.
-        when(mTabModel.getRepresentativeTabAt(0)).thenReturn(mTab1);
-        when(mTabModel.getRepresentativeTabAt(1)).thenReturn(tab3);
+        mockRepresentativeTabs(mTab1, tab3);
         itemTouchHelperCallback.setHoveredTabIndexForTesting(0);
         itemTouchHelperCallback.setSelectedTabIndexForTesting(1);
         itemTouchHelperCallback.getMovementFlags(mRecyclerView, mFakeViewHolder1);
@@ -1278,11 +1269,9 @@ public class TabListMediatorUnitTest {
         // Mock that tab1 and tab2 are in the same group, and they are being restored. The
         // TabListModel has been cleaned out before the restoring happens. This case could happen
         // within a incognito tab group when user switches between light/dark mode.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
+        createTabGroup(List.of(mTab1, mTab2), TAB_GROUP_ID);
+        mockRepresentativeTabs(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(1).when(mTabModel).getIndividualTabAndGroupCount();
         mModelList.clear();
 
         mTabModelObserverCaptor
@@ -1307,10 +1296,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabAddition_Gts() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1333,11 +1319,8 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
         doReturn(Arrays.asList(mTab1, mTab2, newTab)).when(mTabModel).getRelatedTabList(TAB1_ID);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1379,11 +1362,8 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
         doReturn(Arrays.asList(mTab1, mTab2, newTab)).when(mTabModel).getRelatedTabList(TAB1_ID);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1432,13 +1412,10 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
         doReturn(Arrays.asList(mTab1)).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(Arrays.asList(mTab2)).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(TAB3_ID);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         assertEquals(2, mModelList.size());
 
         // Add tab marked as delayed.
@@ -1464,14 +1441,10 @@ public class TabListMediatorUnitTest {
         // Remove the first two tabs.
         mTabModelObserverCaptor.getValue().didRemoveTabForClosure(mTab1);
         mTabModelObserverCaptor.getValue().didRemoveTabForClosure(mTab2);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(0);
         when(mTabModel.getTabAt(0)).thenReturn(newTab);
         when(mTabModel.getCount()).thenReturn(1);
         when(mTabModel.iterator()).thenAnswer(invocation -> List.of(newTab).iterator());
-        when(mTabModel.getRepresentativeTabAt(0)).thenReturn(newTab);
-        when(mTabModel.getRepresentativeTabAt(1)).thenReturn(null);
-        when(mTabModel.getRepresentativeTabAt(2)).thenReturn(null);
-        when(mTabModel.getIndividualTabAndGroupCount()).thenReturn(1);
+        mockRepresentativeTabs(newTab);
 
         // Hide GTS to complete tab addition and selection.
         mMediator.postHiding();
@@ -1490,9 +1463,7 @@ public class TabListMediatorUnitTest {
     public void tabAddition_Gts_Skip() {
         // Add a new tab to the group with mTab2.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2);
         doReturn(Arrays.asList(mTab2, newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1510,10 +1481,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabAddition_Gts_Middle() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(2);
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, newTab, mTab2);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1690,7 +1658,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabSelection_Group() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab2, newTab));
+        List<Tab> tabs = List.of(mTab2, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         ThumbnailFetcher tab1Fetcher = mModelList.get(0).model.get(TabProperties.THUMBNAIL_FETCHER);
@@ -1712,7 +1680,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabSelection_LeaveGroupClears() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab2, newTab));
+        List<Tab> tabs = List.of(mTab2, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         ThumbnailFetcher tab1Fetcher = mModelList.get(0).model.get(TabProperties.THUMBNAIL_FETCHER);
@@ -1835,7 +1803,7 @@ public class TabListMediatorUnitTest {
         when(mTabModel.tabGroupExists(any())).thenReturn(true);
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
         assertThat(mModelList.size(), equalTo(2));
 
@@ -1863,8 +1831,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.size(), equalTo(1));
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(1).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
 
         mTabModelObserverCaptor
@@ -1885,7 +1852,7 @@ public class TabListMediatorUnitTest {
         // Assume that moveTab in TabModel is finished. Selected tab in the group becomes mTab1.
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION2);
         doReturn(mTab2).when(mTabModel).getTabAt(POSITION1);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab1);
 
         // Assume that reset in TabModel is finished.
         createTabGroup(Arrays.asList(mTab1, mTab2), TAB_GROUP_ID);
@@ -1911,7 +1878,7 @@ public class TabListMediatorUnitTest {
         // Assume that moveTab in TabModel is finished. Selected tab in the group becomes mTab1.
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION2);
         doReturn(mTab2).when(mTabModel).getTabAt(POSITION1);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab1);
 
         // Assume that reset in TabModel is finished.
         createTabGroup(Arrays.asList(mTab1, mTab2), TAB_GROUP_ID);
@@ -1988,7 +1955,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void tabMoveOutOfGroup_Gts_Moved_Tab_Selected_GetsFavicon() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(List.of(mTab1), null, false);
 
@@ -1998,13 +1965,9 @@ public class TabListMediatorUnitTest {
         // Assume that TabModel is already updated.
         when(mTabModel.index()).thenReturn(POSITION2);
         when(mTabModel.getTabAt(POSITION2)).thenReturn(mTab1);
-        when(mTabModel.getRepresentativeTabAt(POSITION1)).thenReturn(mTab2);
-        when(mTabModel.representativeIndexOf(mTab2)).thenReturn(POSITION1);
-        when(mTabModel.getRepresentativeTabAt(POSITION2)).thenReturn(mTab1);
-        when(mTabModel.representativeIndexOf(mTab1)).thenReturn(POSITION2);
+        mockRepresentativeTabs(mTab2, mTab1);
         when(mTabModel.isTabInTabGroup(mTab1)).thenReturn(false);
         when(mTabModel.isTabInTabGroup(mTab2)).thenReturn(true);
-        when(mTabModel.getIndividualTabAndGroupCount()).thenReturn(2);
         when(mTab1.getTabGroupId()).thenReturn(null);
         when(mTab2.getRootId()).thenReturn(TAB2_ID);
         when(mTabModel.getTabCountForGroup(TAB_GROUP_ID)).thenReturn(1);
@@ -2027,7 +1990,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabMoveOutOfGroup_Gts_Moved_Tab_Selected() {
         // Assume that two tabs are in the same group before ungroup.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab2));
+        List<Tab> tabs = List.of(mTab2);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
         assertThat(mModelList.size(), equalTo(1));
@@ -2035,12 +1998,8 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(0).model.get(TabProperties.TITLE), equalTo(TAB2_TITLE));
 
         // Assume that TabModel is already updated.
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(mTab1);
+        mockRepresentativeTabs(mTab2, mTab1);
         doReturn(false).when(mTabModel).isTabInTabGroup(mTab1);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab1, POSITION1);
 
@@ -2056,7 +2015,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabMoveOutOfGroup_Gts_Origin_Tab_Selected() {
         // Assume that two tabs are in the same group before ungroup.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
         assertThat(mModelList.size(), equalTo(1));
@@ -2064,9 +2023,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(0).model.get(TabProperties.TITLE), equalTo(TAB1_TITLE));
 
         // Assume that TabModel is already updated.
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2);
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab2, POSITION1);
 
@@ -2082,10 +2039,9 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabMoveOutOfGroup_Gts_LastTab() {
         // Assume that tab1 is a single tab group that became a single tab.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
-        doReturn(1).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab1);
         doReturn(tabs).when(mTabModel).getRelatedTabList(TAB1_ID);
 
         // These properties should get reset.
@@ -2113,7 +2069,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void tabMoveOutOfGroup_Gts_TabAdditionWithSameId() {
         // Assume that two tabs are in the same group before ungroup.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
         assertThat(mModelList.size(), equalTo(1));
@@ -2121,9 +2077,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(0).model.get(TabProperties.TITLE), equalTo(TAB1_TITLE));
 
         // Assume that TabModel is already updated.
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2);
 
         // The ungroup will add tab1 to the TabListModel at index 0. Note that before this addition,
         // there is the PropertyModel represents the group with the same id at the same index. The
@@ -2213,9 +2167,7 @@ public class TabListMediatorUnitTest {
      * @param isGrouped true if the tabs should be grouped
      */
     private void resetWithRegularTabs(boolean isGrouped) {
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2);
         if (isGrouped) {
             doReturn(Arrays.asList(mTab1, mTab2)).when(mTabModel).getRelatedTabList(eq(TAB1_ID));
             doReturn(Arrays.asList(mTab1, mTab2)).when(mTabModel).getRelatedTabList(eq(TAB2_ID));
@@ -2227,7 +2179,7 @@ public class TabListMediatorUnitTest {
             doReturn(false).when(mTabModel).isTabInTabGroup(mTab1);
             doReturn(false).when(mTabModel).isTabInTabGroup(mTab2);
         }
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         doReturn(false).when(mTab1).isIncognito();
         doReturn(false).when(mTab2).isIncognito();
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -2238,7 +2190,7 @@ public class TabListMediatorUnitTest {
         setUpTabListMediator(TabListMediatorType.TAB_GRID_DIALOG, TabListMode.GRID);
 
         // Assume that filter is already updated.
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab2);
 
         assertThat(mModelList.size(), equalTo(2));
         assertThat(mModelList.get(0).model.get(TabProperties.TAB_ID), equalTo(TAB1_ID));
@@ -2259,10 +2211,9 @@ public class TabListMediatorUnitTest {
         setUpTabListMediator(TabListMediatorType.TAB_GRID_DIALOG, TabListMode.GRID);
 
         // Assume that tab1 is a single tab.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
-        doReturn(1).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab1);
         doReturn(tabs).when(mTabModel).getRelatedTabList(TAB1_ID);
 
         // Ungroup the single tab.
@@ -2276,7 +2227,6 @@ public class TabListMediatorUnitTest {
         setUpTabListMediator(TabListMediatorType.TAB_STRIP, TabListMode.GRID);
 
         // Assume that filter is already updated.
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
 
         assertThat(mModelList.size(), equalTo(2));
         assertThat(mModelList.get(0).model.get(TabProperties.TAB_ID), equalTo(TAB1_ID));
@@ -2297,7 +2247,6 @@ public class TabListMediatorUnitTest {
         setUpTabListMediator(TabListMediatorType.TAB_STRIP, TabListMode.GRID);
 
         // Setup the same as tabMoveOutOfGroup_Strip.
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
 
         assertThat(mModelList.size(), equalTo(2));
         assertThat(mModelList.get(0).model.get(TabProperties.TAB_ID), equalTo(TAB1_ID));
@@ -2404,21 +2353,18 @@ public class TabListMediatorUnitTest {
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
 
         // Setup three tabs with groups (mTab1, mTab2) and tab3.
-        List<Tab> group = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> group = List.of(mTab1, mTab2);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
+        mockRepresentativeTabs(mTab1, tab3);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(tab3);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION1);
         doReturn(mTab2).when(mTabModel).getTabAt(POSITION2);
         doReturn(tab3).when(mTabModel).getTabAt(2);
         doReturn(TAB_GROUP_ID).when(mTab1).getTabGroupId();
         doReturn(TAB_GROUP_ID).when(mTab2).getTabGroupId();
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(2));
 
@@ -2435,7 +2381,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(1).model.get(TabProperties.IS_SELECTED), equalTo(true));
 
         // Assume that moveTab in TabModel is finished (swap mTab1 and mTab2).
-        group = new ArrayList<>(Arrays.asList(mTab2, mTab1));
+        group = List.of(mTab2, mTab1);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION2);
@@ -2463,14 +2409,11 @@ public class TabListMediatorUnitTest {
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
 
         // Setup three tabs with groups (mTab1, mTab2) and tab3.
-        List<Tab> group = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> group = List.of(mTab1, mTab2);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
+        mockRepresentativeTabs(mTab1, tab3);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(tab3);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION1);
         doReturn(mTab2).when(mTabModel).getTabAt(POSITION2);
         doReturn(tab3).when(mTabModel).getTabAt(2);
@@ -2481,7 +2424,7 @@ public class TabListMediatorUnitTest {
         doReturn(TAB_GROUP_ID).when(mTab2).getTabGroupId();
 
         // Select tab3 so the group doesn't have the selected tab.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(2));
 
@@ -2497,7 +2440,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(1).model.get(TabProperties.IS_SELECTED), equalTo(true));
 
         // Assume that moveTab in TabModel is finished (swap mTab1 and mTab2).
-        group = new ArrayList<>(Arrays.asList(mTab2, mTab1));
+        group = List.of(mTab2, mTab1);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION2);
@@ -2525,12 +2468,11 @@ public class TabListMediatorUnitTest {
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
 
         // Setup three tabs grouped together.
-        List<Tab> group = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> group = List.of(mTab1, mTab2, tab3);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB3_ID);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
+        mockRepresentativeTabs(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(tab3);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION1);
@@ -2540,7 +2482,7 @@ public class TabListMediatorUnitTest {
         doReturn(TAB_GROUP_ID).when(mTab2).getTabGroupId();
         doReturn(TAB_GROUP_ID).when(tab3).getTabGroupId();
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(1));
 
@@ -2555,7 +2497,7 @@ public class TabListMediatorUnitTest {
         // Swap mTab2 and tab3.
         doReturn(mTab2).when(mTabModel).getTabAt(2);
         doReturn(tab3).when(mTabModel).getTabAt(POSITION2);
-        group = new ArrayList<>(Arrays.asList(mTab1, tab3, mTab2));
+        group = List.of(mTab1, tab3, mTab2);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB3_ID);
@@ -2582,12 +2524,11 @@ public class TabListMediatorUnitTest {
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
 
         // Setup three tabs grouped together.
-        List<Tab> group = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> group = List.of(mTab1, mTab2, tab3);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB3_ID);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
+        mockRepresentativeTabs(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(tab3);
         doReturn(mTab1).when(mTabModel).getTabAt(POSITION1);
@@ -2597,7 +2538,7 @@ public class TabListMediatorUnitTest {
         doReturn(TAB_GROUP_ID).when(mTab2).getTabGroupId();
         doReturn(TAB_GROUP_ID).when(tab3).getTabGroupId();
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(1));
 
@@ -2612,7 +2553,7 @@ public class TabListMediatorUnitTest {
         // Swap mTab1 and mTab3.
         doReturn(mTab1).when(mTabModel).getTabAt(2);
         doReturn(tab3).when(mTabModel).getTabAt(POSITION1);
-        group = new ArrayList<>(Arrays.asList(tab3, mTab2, mTab1));
+        group = List.of(tab3, mTab2, mTab1);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB1_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB2_ID);
         doReturn(group).when(mTabModel).getRelatedTabList(TAB3_ID);
@@ -2638,15 +2579,12 @@ public class TabListMediatorUnitTest {
     public void undoGrouped_One_Adjacent_Tab() {
         // Assume there are 3 tabs in TabModel, mTab2 just grouped with mTab1;
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(2));
 
         // Assume undo grouping mTab2 with mTab1.
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(2);
+        mockRepresentativeTabs(mTab1, mTab2, tab3);
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab2, POSITION1);
 
@@ -2660,18 +2598,12 @@ public class TabListMediatorUnitTest {
     public void undoForwardGrouped_One_Tab() {
         // Assume there are 3 tabs in TabModel, tab3 just grouped with mTab1;
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(2));
 
         // Assume undo grouping tab3 with mTab1.
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(2).when(mTabModel).representativeIndexOf(tab3);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(2);
+        mockRepresentativeTabs(mTab1, mTab2, tab3);
         doReturn(false).when(mTabModel).isTabInTabGroup(tab3);
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(tab3, POSITION1);
@@ -2686,18 +2618,12 @@ public class TabListMediatorUnitTest {
     public void undoBackwardGrouped_One_Tab() {
         // Assume there are 3 tabs in TabModel, mTab1 just grouped with mTab2;
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab2, tab3));
+        List<Tab> tabs = List.of(mTab2, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(2));
 
         // Assume undo grouping mTab1 from mTab2.
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(mTab2);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(2);
-        doReturn(2).when(mTabModel).representativeIndexOf(tab3);
+        mockRepresentativeTabs(mTab1, mTab2, tab3);
         doReturn(false).when(mTabModel).isTabInTabGroup(mTab1);
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab1, POSITION2);
@@ -2716,28 +2642,24 @@ public class TabListMediatorUnitTest {
         when(mTabModel.iterator())
                 .thenAnswer(invocation -> List.of(mTab1, mTab2, tab3, tab4).iterator());
         doReturn(4).when(mTabModel).getCount();
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(1));
 
         // Assume undo grouping tab3 with mTab1.
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
 
         // Undo tab 3.
         List<Tab> relatedTabs = Arrays.asList(tab3);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
+        mockRepresentativeTabs(mTab1, tab3);
         doReturn(mTab1).when(mTabModel).getTabAt(0);
         doReturn(mTab2).when(mTabModel).getTabAt(1);
         doReturn(tab4).when(mTabModel).getTabAt(2);
         doReturn(tab3).when(mTabModel).getTabAt(3);
-        doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(tab4);
         doReturn(0).when(mTabModel).indexOf(mTab1);
         doReturn(1).when(mTabModel).indexOf(mTab2);
         doReturn(2).when(mTabModel).indexOf(tab4);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(POSITION2).when(mTabModel).representativeIndexOf(tab3);
         doReturn(3).when(mTabModel).indexOf(tab3);
         doReturn(false).when(mTabModel).isTabInTabGroup(tab3);
         doReturn(true).when(mTabModel).isTabInTabGroup(tab4);
@@ -2756,7 +2678,6 @@ public class TabListMediatorUnitTest {
         doReturn(3).when(mTabModel).indexOf(tab4);
         doReturn(true).when(mTabModel).isTabInTabGroup(tab3);
         doReturn(true).when(mTabModel).isTabInTabGroup(tab4);
-        doReturn(tab3).when(mTabModel).getRepresentativeTabAt(POSITION2);
         doReturn(tab3).when(mTabModel).getTabAt(2);
         doReturn(tab4).when(mTabModel).getTabAt(3);
         doReturn(relatedTabs).when(mTabModel).getRelatedTabList(TAB3_ID);
@@ -2850,7 +2771,7 @@ public class TabListMediatorUnitTest {
                 equalTo(CUSTOMIZED_DIALOG_TITLE1));
 
         // Mock that tab1 and tab2 are in the same group and group root id is TAB1_ID.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         // Even if we have a stored title, we only show it in tab switcher.
@@ -2869,7 +2790,7 @@ public class TabListMediatorUnitTest {
                 equalTo(CUSTOMIZED_DIALOG_TITLE1));
 
         // Mock that tab1 is a single tab.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         // We never show stored title for single tab.
@@ -2888,7 +2809,7 @@ public class TabListMediatorUnitTest {
                 equalTo(CUSTOMIZED_DIALOG_TITLE1));
 
         // Mock that tab1 is a single tab.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> tabs = List.of(mTab1);
         createTabGroup(tabs, null);
         when(mTabModel.isTabInTabGroup(mTab1)).thenReturn(false);
 
@@ -2908,7 +2829,7 @@ public class TabListMediatorUnitTest {
                 equalTo(CUSTOMIZED_DIALOG_TITLE1));
 
         // Mock that tab1 and tab2 are in the same group and group root id is TAB1_ID.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         assertThat(
@@ -2919,7 +2840,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void getLatestTitle_Default_Gts() {
         // Mock that tab1 and tab2 are in the same group and group root id is TAB1_ID.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         assertThat(
@@ -2930,7 +2851,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void getLatestTitle_NoDefault_Gts() {
         // Mock that tab1 and tab2 are in the same group and group root id is TAB1_ID.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         assertThat(
@@ -2945,7 +2866,7 @@ public class TabListMediatorUnitTest {
 
         // Mock that tab1 and newTab are in the same group and group root id is TAB1_ID.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
         doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
@@ -3027,7 +2948,7 @@ public class TabListMediatorUnitTest {
         mMediator.addSpecialItemToModel(0, UiType.PRICE_MESSAGE, model);
         assertEquals(UiType.PRICE_MESSAGE, mModelList.get(0).type);
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         mMediator.resetWithListOfTabs(tabs, null, /* quickMode= */ false);
         assertThat(mModelList.size(), equalTo(2));
         assertNotEquals(UiType.PRICE_MESSAGE, mModelList.get(0).type);
@@ -3132,7 +3053,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void testUrlUpdated_forGroup_Gts() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
@@ -3166,7 +3087,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void testUrlUpdated_forGroup_Dialog() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab1);
         doReturn(POSITION1).when(mTabModel).representativeIndexOf(mTab2);
@@ -3205,7 +3126,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void testUrlUpdated_forUngroup() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabGroupObserverCaptor.getValue().didMergeTabToGroup(mTab2, /* isDestinationTab= */ false);
@@ -3218,11 +3139,9 @@ public class TabListMediatorUnitTest {
         when(mTabModel.getRelatedTabList(TAB2_ID)).thenReturn(Arrays.asList(mTab2));
         when(mTabModel.isTabInTabGroup(mTab1)).thenReturn(true);
         when(mTabModel.isTabInTabGroup(mTab2)).thenReturn(false);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
+        mockRepresentativeTabs(mTab1, mTab2);
         when(mTab2.getTabGroupId()).thenReturn(null);
         doReturn(1).when(mTabModel).getTabCountForGroup(TAB_GROUP_ID);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab2, POSITION1);
         assertEquals(mTab1Domain, mModelList.get(POSITION1).model.get(TabProperties.URL_DOMAIN));
@@ -3231,7 +3150,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void tabMoveOutOfGroup_CreatesSingleTabGroup() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mTabGroupObserverCaptor.getValue().didMergeTabToGroup(mTab2, /* isDestinationTab= */ false);
@@ -3249,9 +3168,7 @@ public class TabListMediatorUnitTest {
         when(mTabModel.getTabCountForGroup(newGroupId)).thenReturn(1);
         when(mTabModel.tabGroupExists(newGroupId)).thenReturn(true);
         when(mTabModel.getGroupLastShownTabId(newGroupId)).thenReturn(TAB2_ID);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
+        mockRepresentativeTabs(mTab1, mTab2);
 
         mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab2, POSITION1);
 
@@ -3268,7 +3185,7 @@ public class TabListMediatorUnitTest {
         AccessibilityAction action1 = new AccessibilityAction(R.id.move_tab_left, "left");
         AccessibilityAction action2 = new AccessibilityAction(R.id.move_tab_right, "right");
         AccessibilityAction action3 = new AccessibilityAction(R.id.move_tab_up, "up");
-        doReturn(new ArrayList<>(Arrays.asList(action1, action2, action3)))
+        doReturn(List.of(action1, action2, action3))
                 .when(mTabGridAccessibilityHelper)
                 .getPotentialActionsForView(mItemView1);
         InOrder accessibilityNodeInfoInOrder = Mockito.inOrder(accessibilityNodeInfo);
@@ -3375,9 +3292,7 @@ public class TabListMediatorUnitTest {
         verify(mTab2).removeObserver(any());
 
         // Assume that TabModel is already updated to reflect closed tab is undone.
-        doReturn(2).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(POSITION2);
+        mockRepresentativeTabs(mTab1, mTab2);
         when(mTabModel.getRelatedTabList(TAB1_ID)).thenReturn(Arrays.asList(mTab1));
         when(mTabModel.getRelatedTabList(TAB2_ID)).thenReturn(Arrays.asList(mTab2));
 
@@ -3734,7 +3649,7 @@ public class TabListMediatorUnitTest {
 
         // Test a group of three.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
         mTabGroupObserverCaptor.getValue().didCreateNewGroup(mTab1, mTabModel);
 
@@ -3755,7 +3670,7 @@ public class TabListMediatorUnitTest {
 
         // Test a group of three.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
         mTabObserverCaptor.getValue().onFaviconUpdated(mTab1, mFaviconBitmap, mFaviconUrl);
 
@@ -3781,7 +3696,7 @@ public class TabListMediatorUnitTest {
             tabs.add(mTabModel.getTabAt(i));
         }
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab2, tab3));
+        List<Tab> group1 = List.of(mTab2, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
 
         // Reset with show quickly.
@@ -3850,7 +3765,7 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
 
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
         String targetString = mResources.getString(R.string.accessibility_restore_tab, TAB3_TITLE);
@@ -3867,8 +3782,8 @@ public class TabListMediatorUnitTest {
     @Test
     public void testTabDescriptionString_withTabGroupType_Archived() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<Tab> tabs = List.of(mTab1, newTab);
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
 
         // Ensure the groups are archived.
@@ -3909,7 +3824,7 @@ public class TabListMediatorUnitTest {
                         mSavedTabGroup2.savedTabs.size(),
                         mResources.getString(colorDesc2));
 
-        syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID2));
+        syncIds = List.of(SYNC_GROUP_ID2);
         mMediator.resetWithListOfTabs(tabs, syncIds, false);
 
         assertEquals(TAB_GROUP, mModelList.get(0).model.get(CARD_TYPE));
@@ -3935,7 +3850,7 @@ public class TabListMediatorUnitTest {
             tabs.add(mTabModel.getTabAt(i));
         }
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab2, tab3));
+        List<Tab> group1 = List.of(mTab2, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
         setupSyncedGroup(/* isShared= */ true);
 
@@ -3985,7 +3900,7 @@ public class TabListMediatorUnitTest {
     public void testActionButtonDescriptionStringGroupOverflowMenu_TabSwitcher() {
         // Create tab group.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> group1 = List.of(mTab1, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
         final @TabGroupColorId int defaultColor = TabGroupColorId.GREY;
         final @StringRes int colorDesc =
@@ -4026,8 +3941,8 @@ public class TabListMediatorUnitTest {
     @Test
     public void testTabGroupActionButtonDescriptionString_WithTabGroupType_Archived() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<Tab> tabs = List.of(mTab1, newTab);
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
 
         // Ensure the groups are archived.
@@ -4068,7 +3983,7 @@ public class TabListMediatorUnitTest {
                         mSavedTabGroup2.savedTabs.size(),
                         mResources.getString(colorDesc2));
 
-        syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID2));
+        syncIds = List.of(SYNC_GROUP_ID2);
         mMediator.resetWithListOfTabs(tabs, syncIds, false);
 
         assertEquals(TAB_GROUP, mModelList.get(0).model.get(CARD_TYPE));
@@ -4089,7 +4004,7 @@ public class TabListMediatorUnitTest {
         when(mProfile.getOriginalProfile()).thenReturn(mProfile);
 
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab2, tab3));
+        List<Tab> group1 = List.of(mTab2, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
         setupSyncedGroup(/* isShared= */ true);
 
@@ -4178,7 +4093,7 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
         when(mSelectionDelegate.isItemSelected(ITEM1_ID)).thenReturn(false);
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(3));
         assertThat(mModelList.get(0).model.get(TabProperties.IS_SELECTED), equalTo(false));
@@ -4229,7 +4144,7 @@ public class TabListMediatorUnitTest {
         initAndAssertAllProperties();
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
         when(mSelectionDelegate.isItemSelected(ITEM1_ID)).thenReturn(false);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(3));
         assertThat(mModelList.get(0).model.get(TabProperties.IS_SELECTED), equalTo(false));
@@ -4344,7 +4259,7 @@ public class TabListMediatorUnitTest {
 
         // Mock that tab1 and tab3 are in the same group and group root id is TAB1_ID.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(List.of(mTab1, mTab2), null, true);
@@ -4370,7 +4285,7 @@ public class TabListMediatorUnitTest {
 
         // Mock that tab1 and tab3 are in the same group and group root id is TAB1_ID.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(List.of(mTab1, mTab2), null, true);
@@ -4399,7 +4314,7 @@ public class TabListMediatorUnitTest {
 
         // Mock that tab1 and tab3 are in the same group and group root id is TAB1_ID.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         assertEquals(2, mModelList.size());
@@ -4423,7 +4338,7 @@ public class TabListMediatorUnitTest {
 
         // Mock that tab1 and tab3 are in the same group and group root id is TAB1_ID.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> tabs = List.of(mTab1, tab3);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(List.of(mTab1, mTab2), null, true);
@@ -4457,7 +4372,7 @@ public class TabListMediatorUnitTest {
 
         // Create tab group.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1, tab3));
+        List<Tab> group1 = List.of(mTab1, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4551,12 +4466,9 @@ public class TabListMediatorUnitTest {
         when(mTabModel.indexOf(mTab2)).thenReturn(1);
         when(mTabModel.indexOf(tab3)).thenReturn(2);
 
-        when(mTabModel.getIndividualTabAndGroupCount()).thenReturn(3);
-        when(mTabModel.getRepresentativeTabAt(0)).thenReturn(mTab1);
-        when(mTabModel.getRepresentativeTabAt(1)).thenReturn(mTab2);
-        when(mTabModel.getRepresentativeTabAt(2)).thenReturn(tab3);
+        mockRepresentativeTabs(mTab1, mTab2, tab3);
 
-        List<Tab> tabsInModel = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabsInModel = List.of(mTab1, mTab2, tab3);
         mMediator.resetWithListOfTabs(tabsInModel, null, false);
         assertEquals(TAB1_ID, mModelList.get(0).model.get(TabProperties.TAB_ID));
         assertEquals(TAB2_ID, mModelList.get(1).model.get(TabProperties.TAB_ID));
@@ -4635,16 +4547,13 @@ public class TabListMediatorUnitTest {
         when(mTabModel.indexOf(tab3)).thenReturn(2);
 
         // TabModel also represents all 3.
-        when(mTabModel.getIndividualTabAndGroupCount()).thenReturn(3);
-        when(mTabModel.getRepresentativeTabAt(0)).thenReturn(mTab1);
-        when(mTabModel.getRepresentativeTabAt(1)).thenReturn(mTab2);
-        when(mTabModel.getRepresentativeTabAt(2)).thenReturn(tab3);
+        mockRepresentativeTabs(mTab1, mTab2, tab3);
         when(mTabModel.getRelatedTabList(TAB1_ID)).thenReturn(List.of(mTab1));
         when(mTabModel.getRelatedTabList(TAB2_ID)).thenReturn(List.of(mTab2));
         when(mTabModel.getRelatedTabList(TAB3_ID)).thenReturn(List.of(tab3));
 
         // But TabListModel only has the first two.
-        List<Tab> tabsInModel = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabsInModel = List.of(mTab1, mTab2);
         mMediator.resetWithListOfTabs(tabsInModel, null, false);
         assertEquals(2, mModelList.size());
         assertEquals(TAB1_ID, mModelList.get(0).model.get(TabProperties.TAB_ID));
@@ -4771,7 +4680,7 @@ public class TabListMediatorUnitTest {
         for (int i = 0; i < mTabModel.getCount(); i++) {
             tabs.add(mTabModel.getTabAt(i));
         }
-        List<Tab> group = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> group = List.of(mTab1, mTab2);
         createTabGroup(group, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4808,7 +4717,7 @@ public class TabListMediatorUnitTest {
         }
 
         // Create tab group.
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> group1 = List.of(mTab1, mTab2);
         createTabGroup(group1, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4838,7 +4747,7 @@ public class TabListMediatorUnitTest {
         }
 
         // Create tab group.
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> group1 = List.of(mTab1, mTab2);
         createTabGroup(group1, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4871,7 +4780,7 @@ public class TabListMediatorUnitTest {
         }
 
         // Create tab group.
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> group1 = List.of(mTab1);
         createTabGroup(group1, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4894,7 +4803,7 @@ public class TabListMediatorUnitTest {
         }
 
         // Create tab group.
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab1));
+        List<Tab> group1 = List.of(mTab1);
         createTabGroup(group1, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -4930,15 +4839,15 @@ public class TabListMediatorUnitTest {
         when(mTabModel.getTabAt(4)).thenReturn(tab7);
 
         // Mock that tab3 and tab4 are in the same group and group root id is TAB3_ID.
-        List<Tab> groupTabs1 = new ArrayList<>(Arrays.asList(tab3, tab4));
+        List<Tab> groupTabs1 = List.of(tab3, tab4);
         createTabGroup(groupTabs1, TAB_GROUP_ID, 2);
-        when(mTabModel.getRepresentativeTabAt(2)).thenReturn(tab3);
 
         Token otherGroupId = new Token(74893L, 8490L);
         // Mock that tab5 and tab6 are in the same group and group root id is TAB5_ID.
-        List<Tab> groupTabs2 = new ArrayList<>(Arrays.asList(tab5, tab6));
+        List<Tab> groupTabs2 = List.of(tab5, tab6);
         createTabGroup(groupTabs2, otherGroupId, 3);
-        when(mTabModel.getRepresentativeTabAt(3)).thenReturn(tab5);
+
+        mockRepresentativeTabs(mTab1, mTab2, tab3, tab5, tab7);
 
         Rect tab1Rect = new Rect();
         tab1Rect.bottom = 1;
@@ -4959,13 +4868,13 @@ public class TabListMediatorUnitTest {
         // Mock tab7 is outside the screen view.
         when(mTabListRecyclerView.getRectOfCurrentThumbnail(4, TAB7_ID)).thenReturn(null);
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3, tab5, tab7));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3, tab5, tab7);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(5));
 
         TreeMap<Integer, List<Integer>> resultMap = new TreeMap<>();
 
-        List<Tab> tabsToFade = new ArrayList<>(Arrays.asList(mTab1, tab4, tab5, tab6, tab7));
+        List<Tab> tabsToFade = List.of(mTab1, tab4, tab5, tab6, tab7);
 
         mMediator.getOrderOfTabsForQuickDeleteAnimation(
                 mTabListRecyclerView, tabsToFade, resultMap);
@@ -5011,7 +4920,7 @@ public class TabListMediatorUnitTest {
 
         // Unique sets of keys for each of SELECTABLE/CLOSABLE.
         ArrayList<PropertyKey> uniqueClosableKeys =
-                new ArrayList<>(Arrays.asList(TAB_GRID_CLOSABLE_KEYS));
+                new ArrayList<>(List.of(TAB_GRID_CLOSABLE_KEYS));
         uniqueClosableKeys.removeAll(Arrays.asList(TAB_GRID_SELECTABLE_KEYS));
 
         // The test starts in the CLOSABLE state.
@@ -5043,7 +4952,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void testUnsetShrinkCloseAnimation_DidNotClose() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -5056,7 +4965,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void testUnsetShrinkCloseAnimation_DidClose_NoModels() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -5075,7 +4984,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void testUnsetShrinkCloseAnimation_DidClose_Tab1Closed() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -5092,7 +5001,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void testUnsetShrinkCloseAnimation_DidClose_TabsClosed() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
+        List<Tab> tabs = List.of(mTab1, newTab);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -5113,7 +5022,7 @@ public class TabListMediatorUnitTest {
     public void testUpdateTabStripNotificationBubble_hasUpdate() {
         // Setup the test such that the tab list is strip mode, with a tab group of 2 tabs.
         setUpTabListMediator(TabListMediatorType.TAB_STRIP, TabListMode.STRIP);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         mMediator.resetWithListOfTabs(tabs, null, false);
@@ -5163,7 +5072,7 @@ public class TabListMediatorUnitTest {
 
         // Setup a tab group with {tab2, tab3}.
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> group1 = new ArrayList<>(Arrays.asList(mTab2, tab3));
+        List<Tab> group1 = List.of(mTab2, tab3);
         createTabGroup(group1, TAB_GROUP_ID);
         setupSyncedGroup(/* isShared= */ true);
 
@@ -5232,14 +5141,11 @@ public class TabListMediatorUnitTest {
 
         // Assume added a new tab to tab model after tab1 and move it to the end(index is 2).
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        doReturn(mTab1).when(mTabModel).getRepresentativeTabAt(0);
-        doReturn(mTab2).when(mTabModel).getRepresentativeTabAt(1);
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
 
         // The index was changed to 2 from 1 after moving the new tab from 1 to 2.
         doReturn(2).when(mTabModel).representativeIndexOf(newTab);
 
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
         doReturn(3).when(mTabModel).getCount();
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(eq(TAB3_ID));
 
@@ -5289,8 +5195,8 @@ public class TabListMediatorUnitTest {
     @Test
     public void testResetWithListOfTabs_withTabGroupType() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<Tab> tabs = List.of(mTab1, newTab);
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
 
         mMediator.resetWithListOfTabs(tabs, syncIds, false);
@@ -5307,8 +5213,8 @@ public class TabListMediatorUnitTest {
     @Test
     public void testBindTabGroupActionButtonData_withTabGroupType() {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, newTab));
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<Tab> tabs = List.of(mTab1, newTab);
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
 
         // Ensure the group is archived.
@@ -5385,7 +5291,7 @@ public class TabListMediatorUnitTest {
     @Test
     public void sendsOpenGroupSignalCorrectly_SavedTabGroupType() {
         List<Tab> tabs = Arrays.asList(mTab1);
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
 
         mMediator.resetWithListOfTabs(tabs, syncIds, false);
@@ -5461,7 +5367,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void removeListItem_TabGroup() {
-        List<String> syncIds = new ArrayList<>(Arrays.asList(SYNC_GROUP_ID1));
+        List<String> syncIds = List.of(SYNC_GROUP_ID1);
         mMediator.setDefaultGridCardSize(new Size(100, 200));
         mMediator.resetWithListOfTabs(null, syncIds, false);
 
@@ -5530,7 +5436,7 @@ public class TabListMediatorUnitTest {
         when(mTab1.getMediaState()).thenReturn(MediaState.MUTED);
         when(mTab2.getMediaState()).thenReturn(MediaState.AUDIBLE);
 
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
 
@@ -5564,7 +5470,7 @@ public class TabListMediatorUnitTest {
 
     @Test
     public void testMediaState_TabGroup_ContentDescription() {
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
         mMediator.resetWithListOfTabs(tabs, null, false);
         PropertyModel model = mModelList.get(0).model;
@@ -5724,8 +5630,7 @@ public class TabListMediatorUnitTest {
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
         setUpActorState(newTab, TabIndicatorStatus.STATIC);
 
-        doReturn(3).when(mTabModel).getIndividualTabAndGroupCount();
-        doReturn(newTab).when(mTabModel).getRepresentativeTabAt(2);
+        mockRepresentativeTabs(mTab1, mTab2, newTab);
         doReturn(Arrays.asList(newTab)).when(mTabModel).getRelatedTabList(TAB3_ID);
 
         mTabModelObserverCaptor
@@ -5975,6 +5880,19 @@ public class TabListMediatorUnitTest {
         doReturn(tabs.length).when(mTabModel).getCount();
     }
 
+    private void mockRepresentativeTabs(Tab... representativeTabs) {
+        doReturn(representativeTabs.length).when(mTabModel).getIndividualTabAndGroupCount();
+        for (int i = 0; i < representativeTabs.length; i++) {
+            doReturn(representativeTabs[i]).when(mTabModel).getRepresentativeTabAt(i);
+            if (representativeTabs[i] != null) {
+                Mockito.lenient()
+                        .doReturn(i)
+                        .when(mTabModel)
+                        .representativeIndexOf(representativeTabs[i]);
+            }
+        }
+    }
+
     private Tab prepareTab(int id, String title, GURL url) {
         Tab tab = TabUiUnitTestUtils.prepareTab(id, title, url);
         when(tab.getView()).thenReturn(mock(View.class));
@@ -6161,7 +6079,7 @@ public class TabListMediatorUnitTest {
 
     private void initWithThreeTabs() {
         Tab tab3 = prepareTab(TAB3_ID, TAB3_TITLE, TAB3_URL);
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2, tab3));
+        List<Tab> tabs = List.of(mTab1, mTab2, tab3);
         mMediator.resetWithListOfTabs(tabs, null, false);
         assertThat(mModelList.size(), equalTo(3));
         assertThat(mModelList.get(0).model.get(TabProperties.IS_SELECTED), equalTo(true));
@@ -6249,7 +6167,7 @@ public class TabListMediatorUnitTest {
         assertThat(mModelList.get(1).model.get(TabProperties.TAB_ID), equalTo(TAB2_ID));
 
         // Pretend the tabs are already grouped.
-        List<Tab> tabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        List<Tab> tabs = List.of(mTab1, mTab2);
         createTabGroup(tabs, TAB_GROUP_ID);
 
         // Ungroup tab 2 from a group that no longer contains any tabs.
@@ -6640,7 +6558,7 @@ public class TabListMediatorUnitTest {
         // Move tab3 out of the group
         when(tab3.getTabGroupId()).thenReturn(null);
         mockTabIndexes(mTab1, tab3);
-        when(mTabModel.getRepresentativeTabAt(POSITION1)).thenReturn(mTab1);
+        mockRepresentativeTabs(mTab1, tab3);
         when(mTabModel.getTabCountForGroup(TAB_GROUP_ID)).thenReturn(1);
         when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(List.of(mTab1));
 
